Fix code styling
So <code>'s don't overlap with other <code>'s or <kbd>'s etc on an
adjacent line.

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,7 +1,8 @@
 code {
   background-color: var(--code-background-color);
   color: var(--code-color);
-  padding: 0.2em 0.4em;
+  padding-left: 5px;
+  padding-right: 5px;
   font-family: var(--code-font-family);
   border-radius: 3px;
 }
